parslers-benchmark/src/tests/invalid/semanticErr/variables/doubleDeclare.wacc
# redeclaration of variable

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int x = 10 ;
  int x = 20
end
